...
  }, [navigation]);

  return (
    <Animated.View style={styles.screen}>
      <SettingsUI.Header title="Settings" onBack={navigation.goBack} />
      <ScrollView
        testID="settings.screen"
        contentInsetAdjustmentBehavior="automatic"
        contentContainerStyle={{
          paddingHorizontal: Platform.OS === "android" ? undefined : 18,
        }}
      >
        <SettingsUI.Section label="Home screen">
...
            label="Breathing circle"
            secondaryLabel="The circles that grow and shrink with each breath"
            iconName="ellipse-outline"
            iconBackgroundColor="#fdba74"
            value={showBreathingAnimation}
            onValueChange={setShowBreathingAnimation}
            testID="settings.show-breathing-animation"
          />
        </SettingsUI.Section>
        <SettingsUI.Section label="Appearance">
          <SettingsUI.SwitchItem
            label="Use system theme"
            secondaryLabel="Follow system light/dark mode"
...
          {!shouldFollowSystemDarkMode && (
            <SettingsUI.PickerItem
              label="Theme"
              iconName="color-palette"
              iconBackgroundColor="#d8b4fe"
              options={[
                { value: "light", label: "Light theme" },
                { value: "dark", label: "Dark theme" },
              ]}
              value={theme}
              onValueChange={(value) => setTheme(value as Theme)}
              testID="settings.theme"
            />
          )}
        </SettingsUI.Section>
        <SettingsUI.Section label="Haptics" hideBottomBorderWeb>
          <SettingsUI.SwitchItem
            label="Vibration"
...
