...

  const contentAnimatedStyle = {
    opacity: unmountContentAnimVal,
  };

  return (
    <Animated.View style={[styles.runningContent, contentAnimatedStyle]} testID="exercise.running">
      <Timer
        countsInBackground={continuesInBackground}
        limit={timeLimit}
        initialActiveElapsedMs={initialActiveElapsedMs}
        onActiveElapsedChange={onActiveElapsedChange}
        onLimitReached={handleTimeLimitReached}
...
